backend/tests/snapshots/players__create_player.snap
---
source: tests/players.rs
expression: body
---
{
  "active": true,
  "createdAt": "[createdAt]",
  "id": "[uuid]",
  "name": "Jan de Boer",
  "position": "central_midfielder",
  "shirtNumber": 10
}
