backend/tests/snapshots/players__get_player.snap
---
source: tests/players.rs
expression: body
---
{
  "active": true,
  "createdAt": "[createdAt]",
  "firstName": "Jan",
  "id": "[uuid]",
  "lastName": "de Boer",
  "position": "Centrale middenvelder",
  "shirtNumber": 10,
  "teamId": "[uuid]",
  "user": null
}
