backend/tests/snapshots/players__player_stats_empty.snap
---
source: tests/players.rs
expression: body
---
{
  "appearances": 0,
  "assists": 0,
  "goalMatches": [],
  "goals": 0,
  "playerId": "[uuid]",
  "redCards": 0,
  "yellowCards": 0
}
